--- a/Views/Cards/Category.cshtml
+++ b/Views/Cards/Category.cshtml
@@ -5,15 +5,16 @@
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
 				<li class="breadcrumb-item" aria-current="page">
-					<a asp-action="Sets" asp-route-page="1"
+					<a class="text-info"
+					   asp-action="Sets" asp-route-page="1"
 					   asp-route-name="@Model.Filters.Name"
 					   asp-route-numberOfCards="@Model.Filters.NumberOfCards"
 					   asp-route-author="@Model.Filters.Author"
 					   asp-route-sort="@Model.Filters.SortBy">
-						All sets
+						Sets
 					</a>
 				</li>
-				<li class="breadcrumb-item active" aria-current="page">@Model.CardCategory.Name</li>
+				<li class="breadcrumb-item active text-light" aria-current="page">@Model.CardCategory.Name</li>
 			</ol>
 		</nav>
 	</div>
@@ -30,12 +31,12 @@
 </div>
 <div class="row">
 	<div class="col-12">
-		<p class="mt-3 mb-3"><strong>Different category?</strong></p>
+		<p class="mt-3 mb-3 text-light"><strong>Different category?</strong></p>
 	</div>
 	<div class="col-12 subject-category-buttons">
 		@foreach (var category in Model.OtherCategories)
 		{
-			<a class="btn btn-light different-cat-sub"
+			<a class="btn btn-primary text-light different-cat-sub"
 		   asp-route-categoryName="@category.Name"
 		   asp-route-page="1"
 		   asp-route-name="@Model.Filters.Name"
@@ -49,12 +50,12 @@
 </div>
 <div class="row">
 	<div class="col-12">
-		<p class="mt-3 mb-3"><strong>Specific subject?</strong></p>
+		<p class="mt-3 mb-3 text-light"><strong>Specific subject?</strong></p>
 	</div>
 	<div class="col-12 subject-category-buttons">
 		@foreach (var subject in Model.CardCategory.CardSubjects)
 		{
-			<a class="btn btn-light different-cat-sub"
+			<a class="btn btn-primary text-light different-cat-sub"
 		   asp-action="Subject"
 		   asp-route-categoryName="@Model.CardCategory.Name"
 		   asp-route-subjectName="@subject.Name"
