--- a/Views/Cards/CreateSet.cshtml
+++ b/Views/Cards/CreateSet.cshtml
@@ -3,7 +3,7 @@
 
 
 <div class="row">
-	<div class="col"><p class="display-6"><strong>Create a new card set</strong></p></div>
+	<div class="col"><p class="display-6 text-light"><strong>Create a new card set</strong></p></div>
 </div>
 <form method="post">
 	<div class="mb-3">
@@ -46,7 +46,7 @@
 	<div class="row mb-3 d-flex align-items-center">
 		<div class="form-check form-switch offset-4 col-4 d-flex justify-content-center">
 			<input asp-for="CardSet.IsPublic" class="form-check-input checkbox-margin-right" type="checkbox" id="checkPublic">
-			<label class="form-check-label" for="checkPublic">
+			<label class="form-check-label text-light" for="checkPublic">
 				Allow others access to this set?
 			</label>
 		</div>
@@ -60,19 +60,19 @@
 			<div class="col-12 mb-3 qa-card">
 				<div class="card">
 					<div class="card-header p-3 d-flex justify-content-between align-items-center">
-						<p class="card-subtitle text-muted p-0 m-0">@(i+1)</p>
+						<p class="card-subtitle text-light p-0 m-0">@(i+1)</p>
 						<button type="submit" class="btn btn-link text-danger" asp-action="DeleteCardFromModel" asp-route-cardIndex="@i"><i class="bi bi-trash"></i></button>
 					</div>
 					<div class="card-body">
 						<div class="row question-answer">
 							<div class="col-6 form-floating">
-								<input type="text" asp-for="@card.Question" name="CardSet.Cards[@i].Question" class="form-control shadow-none" placeholder="q" id="questionInput-@i">
-								<label class="card-label-floating" for="questionInput-@i">Question</label>
+								<input type="text" asp-for="@card.Question" name="CardSet.Cards[@i].Question" class="form-control shadow-none qa-input" placeholder="q" id="questionInput-@i">
+								<label class="card-label-floating text-light" for="questionInput-@i">Question</label>
 								<span asp-validation-for="@Model.CardSet.Cards[@i].Question" class="text-danger"></span>
 							</div>
 							<div class="col-6 form-floating">
-								<input type="text" asp-for="@card.Answer" name="CardSet.Cards[@i].Answer" class="form-control shadow-none" placeholder="a" id="answerInput-@i">
-								<label class="card-label-floating" for="answerInput-@i">Answer</label>
+								<input type="text" asp-for="@card.Answer" name="CardSet.Cards[@i].Answer" class="form-control shadow-none qa-input" placeholder="a" id="answerInput-@i">
+								<label class="card-label-floating text-light" for="answerInput-@i">Answer</label>
 								<span asp-validation-for="@Model.CardSet.Cards[@i].Answer" class="text-danger"></span>
 							</div>
 						</div>
@@ -81,12 +81,12 @@
 			</div>
 			i++;
 		}
-		<div class="col-12 mb-3">
+		<div class="col-12 mb-3 qa-card">
 			<div class="card">
 				<div id="addCardsContainer" class="card-body py-4 text-center d-flex justify-content-center align-items-center">
-					<label id="addManyInputLabel" class="card-label" for="addManyInput">How many cards to add?</label>
-					<input id="addManyInput" asp asp-for="@Model.AddManyCards" type="number" class="form-control shadow-none mx-2" min="1" max="@(50 - Model.CardSet.Cards.Count())" style="width: 70px;">
-					<button type="submit" id="btnAddCards" class="btn btn-light" asp-action="AddCardToModel">Add Card</button>
+					<label id="addManyInputLabel" class="card-label text-light" for="addManyInput">How many cards to add?</label>
+					<input id="addManyInput" asp asp-for="@Model.AddManyCards" type="number" class="form-control shadow-none qa-input mx-2" min="1" max="@(50 - Model.CardSet.Cards.Count())" style="width: 70px;">
+					<button type="submit" id="btnAddCards" class="btn btn-info" asp-action="AddCardToModel">Add Card</button>
 					<p hidden id="cardLimitInfo" class="text-primary m-0">Limit of cards per set achieved.</p>
 				</div>
 			</div>
