--- a/Views/Cards/Sets.cshtml
+++ b/Views/Cards/Sets.cshtml
@@ -4,7 +4,7 @@
 	<div class="col-12">
 		<nav aria-label="breadcrumb">
 			<ol class="breadcrumb">
-				<li class="breadcrumb-item active" aria-current="page">All sets</li>
+				<li class="breadcrumb-item active text-light" aria-current="page">Sets</li>
 			</ol>
 		</nav>
 	</div>
@@ -13,27 +13,23 @@
 	<div class="col-12">
 		<div class="container-fluid cat-sub-title rounded text-dark p-3">
 			<div class="container py-3 px-5">
-				<p class="lead">All public</p>
+				<p class="lead">Public</p>
 				<p class="display-6"><strong>Flashcard sets</strong></p>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="row">
+<div class="rowt">
 	<div class="col-12">
-		<p class="my-3"><strong>Specific category?</strong></p>
+		<p class="my-3 text-light"><strong>Specific category?</strong></p>
 	</div>
 	<div class="col-12 subject-category-buttons">
 		@foreach (var category in Model.CardCategories)
 		{
-			<a class="btn btn-light different-cat-sub"
-		   asp-action="Category"
-		   asp-route-categoryName="@category.Name"
-		   asp-route-page="1"
-		   asp-route-name="@Model.Filters.Name"
-		   asp-route-numberOfCards="@Model.Filters.NumberOfCards"
-		   asp-route-author="@Model.Filters.Author"
-		   asp-route-sort="@Model.Filters.SortBy">
+			<a class="btn btn-primary different-cat-sub text-light" asp-action="Category"
+			asp-route-categoryName="@category.Name" asp-route-page="1" asp-route-name="@Model.Filters.Name"
+			asp-route-numberOfCards="@Model.Filters.NumberOfCards" asp-route-author="@Model.Filters.Author"
+			asp-route-sort="@Model.Filters.SortBy">
 				@category.Name
 			</a>
 		}
