--- a/Views/Shared/_CardSetList.cshtml
+++ b/Views/Shared/_CardSetList.cshtml
@@ -1,34 +1,43 @@
 ﻿@model List<CardSet>
 
 <div class="col-12">
-	<p class="mt-3 mb-3"><strong>Flashcard sets</strong></p>
+	<p class="mt-3 mb-3 text-light"><strong>Flashcard sets</strong></p>
 </div>
 <div class="col-12">
 	<div class="row">
 		@foreach (var cardSet in @Model)
 		{
 			<div class="col-4 pb-4 d-flex align-items-stretch">
-				<div class="card flex-grow-1">
+				<div class="card set-card flex-grow-1">
 					<div class="card-body d-flex flex-column justify-content-between">
-						<div class="row">
-							@if((string)ViewContext.RouteData.Values["action"] == "Category" || (string)ViewContext.RouteData.Values["action"] == "Sets") {
-							<div class="tags mb-2">
-								@if((string)ViewContext.RouteData.Values["action"] == "Sets"){
-								<div class="tag-category"><p class="p-0 m-0">@cardSet.CardSubject.CardCategory.Name</p></div>
-								}
-								<div class="tag-subject"><p class="p-0 m-0">@cardSet.CardSubject.Name</p></div>
-							</div>
+						<div class="row mb-1">
+							<h5 class="card-title text-light">@cardSet.Name</h5>
+							@if ((string)ViewContext.RouteData.Values["action"] == "Category" ||
+									(string)ViewContext.RouteData.Values["action"] == "Sets")
+							{
+								<div class="tags mb-1">
+									@if ((string)ViewContext.RouteData.Values["action"] == "Sets")
+									{
+										<div class="tag-category">
+											<p class="p-0 m-0">@cardSet.CardSubject.CardCategory.Name</p>
+										</div>
+									}
+									<div class="tag-subject">
+										<p class="p-0 m-0">@cardSet.CardSubject.Name</p>
+									</div>
+								</div>
 							}
-							<h5 class="card-title">@cardSet.Name</h5>
-							@*<h6 class="card-subtitle mb-2 text-muted">@cardSet.Cards.Count()</h6>*@
-							<p class="card-text">
+							<p class="card-text text-light">
 								@cardSet.Description
 							</p>
 						</div>
 						<div class="row">
 							<div class="col-12 d-flex justify-content-between align-items-center">
-								<p class="m-0">created by: @cardSet.User.Nickname</p>
-								<button class="btn btn-light previewButton" data-id="@cardSet.Id" data-title="@cardSet.Name" data-bs-toggle="modal" data-bs-target="#previewModal">Preview</button>
+								<p class="m-0 text-light"><a class="text-info user-link"
+									asp-route-author="@cardSet.User.Nickname"><i class="bi bi-person-circle"></i>
+										@cardSet.User.Nickname</a></p>
+								<button class="btn btn-info previewButton" data-id="@cardSet.Id" data-title="@cardSet.Name"
+								data-bs-toggle="modal" data-bs-target="#previewModal">Preview</button>
 							</div>
 						</div>
 					</div>
