--- a/Views/Shared/_CardSetListPagination.cshtml
+++ b/Views/Shared/_CardSetListPagination.cshtml
@@ -7,47 +7,49 @@
 			<ul class="pagination d-flex justify-content-center align-items-end">
 				@if (Model.CurrentPage != 1)
 				{
-				<li class="page-item">
-					<a class="page-link" asp-route-page="1" aria-label="First">
-						<span aria-hidden="true">&laquo;</span>
-					</a>
-				</li>
-				<li class="page-item">
-					<a class="page-link" asp-route-page="@(Model.CurrentPage - 1)" aria-label="Previous">
-						<span aria-hidden="true">&lsaquo;</span>
-					</a>
-				</li>
+					<li class="page-item">
+						<a class="page-link text-light bg-primary" asp-route-page="1" aria-label="First">
+							<span aria-hidden="true">&laquo;</span>
+						</a>
+					</li>
+					<li class="page-item">
+						<a class="page-link text-light bg-primary" asp-route-page="@(Model.CurrentPage - 1)" aria-label="Previous">
+							<span aria-hidden="true">&lsaquo;</span>
+						</a>
+					</li>
 				}
-				@for (int i = (Model.CurrentPage >= 4 ? Model.CurrentPage - 2 : 1); i <= Model.NumberOfPages && i <= (Model.CurrentPage + 2); i++)
+				@for (int i = (Model.CurrentPage >= 4 ? Model.CurrentPage - 2 : 1); i <= Model.NumberOfPages && i <=
+					(Model.CurrentPage + 2); i++)
 				{
 					if (Model.CurrentPage == i)
 					{
-						<li class="page-item active"><a class="page-link disabled-link" asp-route-page="@i">@i</a></li>
+						<li class="page-item active"><a class="page-link disabled-link text-dark bg-info" asp-route-page="@i">@i</a>
+						</li>
 					}
 					else
 					{
-						<li class="page-item"><a class="page-link" asp-route-page="@i">@i</a></li>
+						<li class="page-item"><a class="page-link text-light bg-primary" asp-route-page="@i">@i</a></li>
 					}
 				}
 				@if (Model.CurrentPage != Model.NumberOfPages)
 				{
-				<li class="page-item">
-					<a class="page-link" asp-route-page="@(Model.CurrentPage + 1)" aria-label="Next">
-						<span aria-hidden="true">&rsaquo;</span>
-					</a>
-				</li>
-				<li class="page-item">
-					<a class="page-link" asp-route-page="@Model.NumberOfPages" aria-label="Last">
-						<span aria-hidden="true">&raquo;</span>
-					</a>
-				</li>
+					<li class="page-item">
+						<a class="page-link text-light bg-primary" asp-route-page="@(Model.CurrentPage + 1)" aria-label="Next">
+							<span aria-hidden="true">&rsaquo;</span>
+						</a>
+					</li>
+					<li class="page-item">
+						<a class="page-link text-light bg-primary" asp-route-page="@Model.NumberOfPages" aria-label="Last">
+							<span aria-hidden="true">&raquo;</span>
+						</a>
+					</li>
 				}
 			</ul>
 		}
 		else
 		{
 			<div class="text-center">
-			<p>No sets match the filters.</p>
+				<p>No sets match the filters.</p>
 			</div>
 		}
 	}
