--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -13,13 +13,13 @@
 	<header>
 		<partial name="_NavbarContent" />
 	</header>
-	<div class="container">
+	<div class="container p-0">
 		<main role="main" class="pb-3">
 			@RenderBody()
 		</main>
 	</div>
 
-	<footer class="border-top footer text-muted">
+	<footer class="border-top footer text-light">
 		<div class="container">
 			&copy; 2022 - FlashCards - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
 		</div>
