--- a/Views/Shared/_NavbarContent.cshtml
+++ b/Views/Shared/_NavbarContent.cshtml
@@ -1,6 +1,6 @@
-﻿<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light border-bottom box-shadow mb-3">
+﻿<nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-dark border-bottom box-shadow mb-3">
 	<div class="container-fluid">
-		<a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FlashCards</a>
+		<a class="navbar-brand text-light" asp-area="" asp-controller="Home" asp-action="Index">FlashCards</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
 				aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
@@ -8,14 +8,14 @@
 		<div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
 			<ul class="navbar-nav flex-grow-1">
 				<li class="nav-item">
-					<a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+					<a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link text-dark" asp-controller="Cards" asp-action="Sets" asp-route-page="1">All sets</a>
+					<a class="nav-link text-light" asp-controller="Cards" asp-action="Sets" asp-route-page="1">All sets</a>
 				</li>
 				@await Component.InvokeAsync("NavCategories")
 				<li class="nav-item">
-					<a class="nav-link btn btn-info btn-sm" asp-controller="Cards" asp-action="CreateSet">Create a set</a>
+					<a class="nav-link btn btn-info btn-sm text-dark" asp-controller="Cards" asp-action="CreateSet">Create a set</a>
 				</li>
 			</ul>
 			<partial name="_LoginPartial" />
