--- a/Views/Shared/_SetsFilters.cshtml
+++ b/Views/Shared/_SetsFilters.cshtml
@@ -2,13 +2,13 @@
 
 <div class="row">
 	<div class="col-12">
-		<p class="my-3"><strong>Filters</strong></p>
+		<p class="my-3 text-light"><strong>Filters</strong></p>
 	</div>
 	<form id="filtersForm" class="col-12 d-flex justify-content-around">
-		<div class="col-2 d-inline-block">
-			<input name="name" asp-for="Name" class="form-control col-3" type="text" placeholder="Name" />
+		<div class="flex-grow-1">
+			<input name="name" asp-for="Name" class="form-control" type="text" placeholder="Name" />
 		</div>
-		<div class="col-2 d-inline-block">
+		<div class="flex-grow-1 mx-2">
 			<select name="numberOfCards" asp-for="NumberOfCards" class="form-select" aria-label="Filter card count">
 				<option value="" selected>All</option>
 				<option value="lessThanTwenty">@("1 - 20")</option>
@@ -16,10 +16,10 @@
 				<option value="moreThanForty">@("40 - 50")</option>
 			</select>
 		</div>
-		<div class="col-2 d-inline-block">
-			<input name="author" asp-for="Author" class="form-control col-3" type="text" placeholder="Nickname" />
+		<div class="flex-grow-1">
+			<input name="author" asp-for="Author" class="form-control" type="text" placeholder="Nickname" />
 		</div>
-		<div class="col-2 d-inline-block">
+		<div class="flex-grow-1 mx-2">
 			<select name="sort" asp-for="SortBy" class="form-select" aria-label="Sort sets">
 				<option selected value="newest">Most recent</option>
 				<option value="oldest">Least recent</option>
@@ -27,10 +27,10 @@
 				<option value="za">Name Z-A</option>
 			</select>
 		</div>
-		<div class="col-2 d-inline-block text-center">
-			<button id="clearFiltersButton" class="btn btn-secondary">Clear</button>
-			<button id="filterButton" type="submit" class="btn btn-primary" asp-action="@((string)ViewContext.RouteData.Values["action"])" 
-			>Apply</button>
+		<div class="col-2 text-center ml-2">
+			<button id="clearFiltersButton" class="btn btn-danger">Clear</button>
+			<button id="filterButton" type="submit" class="btn btn-primary"
+				asp-action="@((string)ViewContext.RouteData.Values["action"])">Apply</button>
 		</div>
 	</form>
 </div>
@@ -41,21 +41,19 @@
 
 	filtersForm.addEventListener('submit', (e) => {
 		filtersForm.querySelectorAll("input").forEach(i => {
-			if(i.value.length === 0)
-			{
+			if (i.value.length === 0) {
 				i.setAttribute('disabled', true);
 			}
 		});
 		filtersForm.querySelectorAll("select").forEach(i => {
-			if(i.value.length === 0)
-			{
+			if (i.value.length === 0) {
 				i.setAttribute('disabled', true);
 			}
 		});
 	});
 
 	filtersForm.addEventListener('keydown', (e) => {
-		if(event.keyCode === 13) {
+		if (event.keyCode === 13) {
 			e.preventDefault();
 			filterButton.click();
 		}
@@ -64,12 +62,12 @@
 	var clearFiltersButton = document.querySelector("#clearFiltersButton");
 	clearFiltersButton.addEventListener('click', () => {
 		filtersForm.querySelectorAll("input").forEach(i => {
-				i.value = '';
+			i.value = '';
 		});
 		filtersForm.querySelectorAll("select").forEach(i => {
-				i.value = '';
+			i.value = '';
 		});
 		filtersForm.submit();
 	})
-	
+
 </script>
